--- a/todo.txt
+++ b/todo.txt
@@ -10,3 +10,4 @@
 - Ambiguous with respect to # of trucks
 - Easier to switch instance when calling from the command line
 - - Example: Should be able to run by calling "python Main.py RC208"
+- Look for any @TODO markers and fix as needed
