Most importantly, adds a move that enforces cluster usage.  Less importantly, cleans up a lot of stuff.

--- a/todo.txt
+++ b/todo.txt
@@ -14,3 +14,4 @@
 - Ambiguous with respect to # of trucks
 - Look for any @TODO markers and fix as needed
 - Use clusters somewhere
+- add cleverness to cluster move
